<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Cadastro"
    >


    <TextView
        android:id="@+id/welcome_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/welcome_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/baloo_paaji_2_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register_text_rp"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        style="@style/Login_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_register"
        />


    <EditText
        android:id="@+id/edit_name"
        style="@style/Edit_Text"
        android:hint="Name"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/navy_70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_register"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="E-mail"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/navy_70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        />

    <EditText
        android:id="@+id/edit_password"
        style="@style/Edit_Text"
        android:hint="Password"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/navy_70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        />


    <EditText
        android:id="@+id/edit_password2nd"
        style="@style/Edit_Text"
        android:hint="Repeat Password"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/navy_70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        />

    <CheckBox
        android:id="@+id/checkbox"
        style="@style/Checkbox"
        android:text="@string/login_checkbox"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_password2nd"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        style="@style/Button"
        android:text="@string/sign_up"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />
    />





</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>